cluster/apps/default/requestbin/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: requestbin
  name: requestbin
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: requestbin
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: requestbin
    spec:
      containers:
        - name: requestbin
          image: yoyostile/requestbin
          imagePullPolicy: Always
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
