cluster/apps/default/requestbin/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: requestbin
  namespace: default
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    app: requestbin
