cluster/apps/default/requestbin/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: requestbin
  namespace: default
  annotations:
    hajimari.io/enable: "true"
    hajimari.io/icon: "delete-empty"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    external-dns.alpha.kubernetes.io/target: "dns.${SECRET_LAB_DOMAIN}"
spec:
  tls:
    - secretName: "${SECRET_LAB_DOMAIN/./-}-tls"
      hosts:
        - bin.${SECRET_LAB_DOMAIN}
        - requestbin.${SECRET_LAB_DOMAIN}
  rules:
    - host: bin.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: requestbin
                port:
                  number: 80
    - host: requestbin.${SECRET_LAB_DOMAIN}
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: requestbin
                port:
                  number: 80
